--- a/docsets/.docset/Contents/Resources/Documents/Functions.html
+++ b/docsets/.docset/Contents/Resources/Documents/Functions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>  Reference</title>
+    <title>Functions  Reference</title>
     <link rel="stylesheet" type="text/css" href="css/jazzy.css" />
     <link rel="stylesheet" type="text/css" href="css/highlight.css" />
     <meta charset='utf-8'>
@@ -10,7 +10,7 @@
     
   </head>
   <body>
-    <a title="  Reference"></a>
+    <a title="Functions  Reference"></a>
     <header>
       <div class="content-wrapper">
         <p><a href="index.html"> Docs</a> (50% documented)</p>
@@ -20,7 +20,7 @@
       <p id="breadcrumbs">
         <a href="index.html"> Reference</a>
         <img id="carat" src="img/carat.png" />
-          Reference
+        Functions  Reference
       </p>
     </div>
     <div class="content-wrapper">
@@ -117,9 +117,34 @@
       <article class="main-content">
         <section>
           <section class="section">
-            
-            <p>It&rsquo;s a coding game!</p>
+            <h1>Functions</h1>
+            <p>The following functions are available globally.</p>
 
+          </section>
+          <section class="section task-group-section">
+            <div class="task-group">
+              <ul>
+                <li class="item">
+                  <div>
+                    <code>
+                    <a name="/s:F10Code_Quest9playSoundFT5soundV10Foundation3URL_T_"></a>
+                    <a name="//apple_ref/swift/Function/playSound(sound:)" class="dashAnchor"></a>
+                    <a class="token" href="#/s:F10Code_Quest9playSoundFT5soundV10Foundation3URL_T_">playSound(sound:)</a>
+                    </code>
+                  </div>
+                  <div class="height-container">
+                    <div class="pointer-container"></div>
+                    <section class="section">
+                      <div class="pointer"></div>
+                      <div class="abstract">
+                        <p>Undocumented</p>
+
+                      </div>
+                    </section>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </section>
         </section>
         <section id="footer">
