--- a/Classes/Maze/Cell.html
+++ b/Classes/Maze/Cell.html
@@ -1,142 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>playerCell Class Reference</title>
-    <link rel="stylesheet" type="text/css" href="../css/jazzy.css" />
-    <link rel="stylesheet" type="text/css" href="../css/highlight.css" />
+    <title>Cell Enum Reference</title>
+    <link rel="stylesheet" type="text/css" href="../../css/jazzy.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/highlight.css" />
     <meta charset='utf-8'>
-    <script src="../js/jquery.min.js" defer></script>
-    <script src="../js/jazzy.js" defer></script>
+    <script src="../../js/jquery.min.js" defer></script>
+    <script src="../../js/jazzy.js" defer></script>
     
   </head>
   <body>
-    <a name="//apple_ref/swift/Class/playerCell" class="dashAnchor"></a>
-    <a title="playerCell Class Reference"></a>
+    <a name="//apple_ref/swift/Enum/Cell" class="dashAnchor"></a>
+    <a title="Cell Enum Reference"></a>
     <header>
       <div class="content-wrapper">
-        <p><a href="../index.html"> Docs</a> (49% documented)</p>
+        <p><a href="../../index.html"> Docs</a> (49% documented)</p>
       </div>
     </header>
     <div class="content-wrapper">
       <p id="breadcrumbs">
-        <a href="../index.html"> Reference</a>
-        <img id="carat" src="../img/carat.png" />
-        playerCell Class Reference
+        <a href="../../index.html"> Reference</a>
+        <img id="carat" src="../../img/carat.png" />
+        Cell Enum Reference
       </p>
     </div>
     <div class="content-wrapper">
       <nav class="sidebar">
         <ul class="nav-groups">
           <li class="nav-group-name">
-            <a href="../Classes.html">Classes</a>
+            <a href="../../Classes.html">Classes</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a href="../Classes/AppDelegate.html">AppDelegate</a>
+                <a href="../../Classes/AppDelegate.html">AppDelegate</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/CommandHandler.html">CommandHandler</a>
+                <a href="../../Classes/CommandHandler.html">CommandHandler</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/CommandView.html">CommandView</a>
+                <a href="../../Classes/CommandView.html">CommandView</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/GameScene.html">GameScene</a>
+                <a href="../../Classes/GameScene.html">GameScene</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/Input.html">Input</a>
+                <a href="../../Classes/Input.html">Input</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/Level.html">Level</a>
+                <a href="../../Classes/Level.html">Level</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/Level/PropertyKey.html">– PropertyKey</a>
+                <a href="../../Classes/Level/PropertyKey.html">– PropertyKey</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/LevelTableViewCell.html">LevelTableViewCell</a>
+                <a href="../../Classes/LevelTableViewCell.html">LevelTableViewCell</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/LevelTableViewController.html">LevelTableViewController</a>
+                <a href="../../Classes/LevelTableViewController.html">LevelTableViewController</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/LevelTutorialViewController.html">LevelTutorialViewController</a>
+                <a href="../../Classes/LevelTutorialViewController.html">LevelTutorialViewController</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/Maze.html">Maze</a>
+                <a href="../../Classes/Maze.html">Maze</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/Maze/Cell.html">– Cell</a>
+                <a href="../../Classes/Maze/Cell.html">– Cell</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/ViewController.html">ViewController</a>
+                <a href="../../Classes/ViewController.html">ViewController</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/floorCell.html">floorCell</a>
+                <a href="../../Classes/floorCell.html">floorCell</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/gameCell.html">gameCell</a>
+                <a href="../../Classes/gameCell.html">gameCell</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/goalCell.html">goalCell</a>
+                <a href="../../Classes/goalCell.html">goalCell</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/playerCell.html">playerCell</a>
+                <a href="../../Classes/playerCell.html">playerCell</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Classes/wallCell.html">wallCell</a>
+                <a href="../../Classes/wallCell.html">wallCell</a>
               </li>
             </ul>
           </li>
           <li class="nav-group-name">
-            <a href="../Global Variables.html">Global Variables</a>
+            <a href="../../Global Variables.html">Global Variables</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest11audioPlayerCSo13AVAudioPlayer">audioPlayer</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest11audioPlayerCSo13AVAudioPlayer">audioPlayer</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest9bumpSoundV10Foundation3URL">bumpSound</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest9bumpSoundV10Foundation3URL">bumpSound</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest10cheerSoundV10Foundation3URL">cheerSound</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest10cheerSoundV10Foundation3URL">cheerSound</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest13commandSoundsGSaV10Foundation3URL_">commandSounds</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest13commandSoundsGSaV10Foundation3URL_">commandSounds</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest9downSoundV10Foundation3URL">downSound</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest9downSoundV10Foundation3URL">downSound</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest9failSoundV10Foundation3URL">failSound</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest9failSoundV10Foundation3URL">failSound</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest10imageNamesGSaSS_">imageNames</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest10imageNamesGSaSS_">imageNames</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest9leftSoundV10Foundation3URL">leftSound</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest9leftSoundV10Foundation3URL">leftSound</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest19num_command_buttonsSi">num_command_buttons</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest19num_command_buttonsSi">num_command_buttons</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest10rightSoundV10Foundation3URL">rightSound</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest10rightSoundV10Foundation3URL">rightSound</a>
               </li>
               <li class="nav-group-task">
-                <a href="../Global Variables.html#/s:v10Code_Quest7upSoundV10Foundation3URL">upSound</a>
+                <a href="../../Global Variables.html#/s:v10Code_Quest7upSoundV10Foundation3URL">upSound</a>
               </li>
             </ul>
           </li>
           <li class="nav-group-name">
-            <a href="../Enums.html">Enums</a>
+            <a href="../../Enums.html">Enums</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a href="../Enums/ButtonType.html">ButtonType</a>
+                <a href="../../Enums/ButtonType.html">ButtonType</a>
               </li>
             </ul>
           </li>
           <li class="nav-group-name">
-            <a href="../Functions.html">Functions</a>
+            <a href="../../Functions.html">Functions</a>
             <ul class="nav-group-tasks">
               <li class="nav-group-task">
-                <a href="../Functions.html#/s:F10Code_Quest9playSoundFT5soundV10Foundation3URL_T_">playSound(sound:)</a>
+                <a href="../../Functions.html#/s:F10Code_Quest9playSoundFT5soundV10Foundation3URL_T_">playSound(sound:)</a>
               </li>
             </ul>
           </li>
@@ -145,7 +145,7 @@
       <article class="main-content">
         <section>
           <section class="section">
-            <h1>playerCell</h1>
+            <h1>Cell</h1>
             <p>Undocumented</p>
 
           </section>
@@ -155,9 +155,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:FC10Code_Quest10playerCellcFT_S0_"></a>
-                    <a name="//apple_ref/swift/Method/init()" class="dashAnchor"></a>
-                    <a class="token" href="#/s:FC10Code_Quest10playerCellcFT_S0_">init()</a>
+                    <a name="/s:FOC10Code_Quest4Maze4Cell5SpaceFMS1_S1_"></a>
+                    <a name="//apple_ref/swift/Element/Space" class="dashAnchor"></a>
+                    <a class="token" href="#/s:FOC10Code_Quest4Maze4Cell5SpaceFMS1_S1_">Space</a>
                     </code>
                   </div>
                   <div class="height-container">
@@ -174,9 +174,9 @@
                 <li class="item">
                   <div>
                     <code>
-                    <a name="/s:FC10Code_Quest10playerCellcFT5coderCSo7NSCoder_GSqS0__"></a>
-                    <a name="//apple_ref/swift/Method/init(coder:)" class="dashAnchor"></a>
-                    <a class="token" href="#/s:FC10Code_Quest10playerCellcFT5coderCSo7NSCoder_GSqS0__">init(coder:)</a>
+                    <a name="/s:FOC10Code_Quest4Maze4Cell4WallFMS1_S1_"></a>
+                    <a name="//apple_ref/swift/Element/Wall" class="dashAnchor"></a>
+                    <a class="token" href="#/s:FOC10Code_Quest4Maze4Cell4WallFMS1_S1_">Wall</a>
                     </code>
                   </div>
                   <div class="height-container">
